yaml/templates/template 2/NetworkPolicy/athena-database-pol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: athena-database-pol
spec:
  podSelector:
    matchLabels:
      role: db
      app: athena
  ingress:
    - from:
      - podSelector:
          matchLabels: 
            app: athena
            role: frontend
  egress:
    - to:
      - podSelector:
          matchLabels: 
            app: athena
            role: frontend
