yaml/templates/template 2/NetworkPolicy/external-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: external-policy
spec:
  podSelector:
    matchLabels:
      lab: example
      net: external
  ingress:
    - from:
      - ipBlock: # Local network range (for VNC/tty connectivity)
        cidr: 10.10.1.0/24  
      - podSelector:
          matchLabels: 
            lab: example
  egress:
    - to: 
      - ipBlock: # Local network range (for VNC/tty connectivity)
        cidr: 10.10.1.0/24 
      - podSelector:
          matchLabels:
            lab: example
