yaml/templates/template 2/NetworkPolicy/internal-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: internal-policy
spec:
  podSelector:
    matchLabels:
      lab: example
      net: internal
  ingress:
    - from:
      - ipBlock: # Local network range (for VNC/tty connectivity)
        cidr: 10.10.1.0/24  
      - podSelector:
          matchLabels: 
            lab: example
            net: dmz     
      - podSelector:
          matchLabels: 
            lab: example
            net: internal
  egress:
    - to:
      - ipBlock: # Local network range (for VNC/tty connectivity)
        cidr: 10.10.1.0/24  
      - podSelector:
          matchLabels:
            lab: example
