yaml/templates/template 2/NetworkPolicy/template-dmz-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: dmz-policy
spec:
  podSelector:
    matchLabels:
      lab: example
      net: dmz
  ingress:
    - from:
      - podSelector:
          matchLabels: 
            lab: example
  egress:
    - to:
      - podSelector:
          matchLabels:
            lab: example
