yaml/templates/template 2/NetworkPolicy/template-external-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: external-policy
spec:
  podSelector:
    matchLabels:
      lab: example
      net: external
  ingress:
    - from:
      - ipBlock:
        cidr: # Local network range (for VNC/tty connectivity)
      - podSelector:
          matchLabels: 
            lab: example
  egress:
    - to:
      - ipBlock:
        cidr: # Local network range (for VNC/tty connectivity)
      - podSelector:
          matchLabels:
            lab: example
