yaml/templates/template 2/NetworkPolicy/template-internal-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: internal-policy
spec:
  podSelector:
    matchLabels:
      lab: example
      net: internal
  ingress:
    - from:
      - ipBlock:
        cidr: # Local network range ( for VNC/tty connectivity)
      - podSelector:
          matchLabels: 
            lab: example
            net: dmz     
      - podSelector:
          matchLabels: 
            lab: example
            net: internal
  egress:
    - to:
      - ipBlock:
        cidr: # Local network range ( for VNC/tty connectivity)
      - podSelector:
          matchLabels:
            lab: example
